# veda

./: CLAUDE.md  README.md  index.html  pyproject.toml
src/veda/: __init__.py  assessment.py  core.py  curriculum.py  mastery.py
tests/: test_assessment.py  test_core.py  test_curriculum.py
