[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "veda"
version = "0.1.0"
description = "Open-source learning platform with courses, modules, lessons, code challenges, progress tracking, and leaderboards."
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
